Reemplazar Locale(String) deprecado por Locale.of en AgendaCard.java